turtleart.lessons.turtleart.Main.HouseThree.scala.error
Source:18: error: not found: value leveBrosse
	leveBrosse()
        ^Source:22: error: not found: value baisseBrosse
	baisseBrosse()
        ^